force-app/main/default/objects/Opportunity/fields/Access_to_Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Access_to_Economic_Buyer__c</fullName>
    <label>Access to Economic Buyer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Match_Criteria</valueSetName>
    </valueSet>
</CustomField>