force-app/main/default/objects/Opportunity/fields/Account_Applicable_Div_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Applicable_Div_Type__c</fullName>
    <label>Account Applicable Div Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>