force-app/main/default/objects/Opportunity/fields/Account_Assessment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Assessment_Notes__c</fullName>
    <description>Cascadion Use</description>
    <label>Account Assessment Notes</label>
    <type>TextArea</type>
</CustomField>