force-app/main/default/objects/Opportunity/fields/Account_Name_English__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_English__c</fullName>
    <label>Account Name (English)</label>
    <type>TextArea</type>
</CustomField>