force-app/main/default/objects/Opportunity/fields/Account_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Zip_Code__c</fullName>
    <label>Account Zip Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>