force-app/main/default/objects/Opportunity/fields/Account_Zip_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Zip_Code_Formula__c</fullName>
    <formula>Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Zip Code Formula</label>
    <type>Text</type>
</CustomField>