force-app/main/default/objects/Opportunity/fields/Actual_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Actual_Go_Live__c</fullName>
    <label>Go Live Date</label>
    <type>Date</type>
</CustomField>