force-app/main/default/objects/Opportunity/fields/Actual_Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Implementation_Date__c</fullName>
    <description>HMD Specific field.</description>
    <label>Implementation Date</label>
    <type>Date</type>
</CustomField>