force-app/main/default/objects/Opportunity/fields/Actual_Month_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Actual_Month_Contract_Signed__c</fullName>
    <label>Actual Month Contract Signed</label>
    <type>Date</type>
</CustomField>