force-app/main/default/objects/Opportunity/fields/Address_State__c.field-meta.xml
<CustomField>
    <fullName>Address_State__c</fullName>
    <formula>Account.Address_States__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address State</label>
    <type>Text</type>
</CustomField>