force-app/main/default/objects/Opportunity/fields/Adequacy_Of_Current_Position__c.field-meta.xml
<CustomField>
    <fullName>Adequacy_Of_Current_Position__c</fullName>
    <label>Adequacy Of Current Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Panic</fullName>
            </value>
            <value>
                <fullName>Fear</fullName>
            </value>
            <value>
                <fullName>Worry</fullName>
            </value>
            <value>
                <fullName>Discomfort</fullName>
            </value>
            <value>
                <fullName>Concern</fullName>
            </value>
            <value>
                <fullName>Okay</fullName>
            </value>
            <value>
                <fullName>Comfort</fullName>
            </value>
            <value>
                <fullName>Secure</fullName>
            </value>
            <value>
                <fullName>Great</fullName>
            </value>
            <value>
                <fullName>Euphoria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>