force-app/main/default/objects/Opportunity/fields/Age_in_IN_Negotiation_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Age_in_IN_Negotiation_Evaluation__c</fullName>
    <formula>TODAY()-  Date_in_Evaluvation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in Negotiation/Evaluation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>