force-app/main/default/objects/Opportunity/fields/Age_in_Needs_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Age_in_Needs_Analysis__c</fullName>
    <formula>TODAY() -  Date_in_Needs_Analysis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in Needs Analysis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>