force-app/main/default/objects/Opportunity/fields/Age_in_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Age_in_On_Hold__c</fullName>
    <formula>TODAY()- Date_in_On_Hold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in On Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>