force-app/main/default/objects/Opportunity/fields/Age_In_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Age_In_Proposal__c</fullName>
    <formula>TODAY() -  Date_in_Proposal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age In Proposal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>