force-app/main/default/objects/Opportunity/fields/Age_in_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Age_in_Prospect__c</fullName>
    <formula>TODAY() - Date_in_Prospect__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in Prospect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>