force-app/main/default/objects/Opportunity/fields/Age_in_Verbal_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Age_in_Verbal_Agreement__c</fullName>
    <formula>TODAY()-  Date_in_Verbal_Agreement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in Verbal Agreement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>