force-app/main/default/objects/Opportunity/fields/ALTF__Altify_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ALTF__Altify_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Altify Opportunity</label>
    <referenceTo>ALTF__Opportunity__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>