force-app/main/default/objects/Opportunity/fields/Altify_Id__c.field-meta.xml
<CustomField>
    <fullName>Altify_Id__c</fullName>
    <formula>CASESAFEID($Organization.Id) + &apos;-&apos;+ Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Altify Id</label>
    <type>Text</type>
</CustomField>