force-app/main/default/objects/Opportunity/fields/Altify_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Altify_Plan_Status__c</fullName>
    <formula>IF( OR(ISBLANK( ALTF__Altify_Opportunity__c) , ISBLANK( TEXT(ALTF__Altify_Opportunity__r.ALTF__Opportunity_Status__c))),
&apos;No Plan&apos;,
TEXT(ALTF__Altify_Opportunity__r.ALTF__Opportunity_Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Altify Plan Status</label>
    <type>Text</type>
</CustomField>