force-app/main/default/objects/Opportunity/fields/Altify_Reporting_Amount__c.field-meta.xml
<CustomField>
    <fullName>Altify_Reporting_Amount__c</fullName>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Altify Reporting Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>