force-app/main/default/objects/Opportunity/fields/Altify_Sales_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Altify_Sales_Process_Status__c</fullName>
    <formula>IF( OR(ISBLANK( ALTF__Altify_Opportunity__c) , ISBLANK( ALTF__Altify_Opportunity__r.ALTF__Sales_Process_Name__c)),
&apos;No Sales Process&apos;,
&apos;Has Sales Process&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Altify Sales Process Status</label>
    <type>Text</type>
</CustomField>