force-app/main/default/objects/Opportunity/fields/Altify_T_I_Status__c.field-meta.xml
<CustomField>
    <fullName>Altify_T_I_Status__c</fullName>
    <label>Altify T&amp;I Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>