force-app/main/default/objects/Opportunity/fields/Amount_USD_Active_Currency__c.field-meta.xml
<CustomField>
    <fullName>Amount_USD_Active_Currency__c</fullName>
    <description>This is used to convert the Opportunity Amount into USD based on the Active Currency Conversion Rate for the WAM and SSO Objects</description>
    <formula>Amount / CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount USD (Active Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>