force-app/main/default/objects/Opportunity/fields/Annual_Average_Value__c.field-meta.xml
<CustomField>
    <fullName>Annual_Average_Value__c</fullName>
    <description>[CDD NA Pilot] Average Annual Value of the deal.</description>
    <formula>IF(
    Contract_Length_CAT__c &lt; 12,
    Total_Value_of_the_Deal_CAT__c ,
    ( Total_Value_of_the_Deal_CAT__c /  Contract_Length_CAT__c ) * 12
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Average Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>