force-app/main/default/objects/Opportunity/fields/Annual_Reagent_Trail__c.field-meta.xml
<CustomField>
    <fullName>Annual_Reagent_Trail__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Annual Reagent Trail</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>