force-app/main/default/objects/Opportunity/fields/Annual_Rev_impact_to_Send_Away_Account__c.field-meta.xml
<CustomField>
    <fullName>Annual_Rev_impact_to_Send_Away_Account__c</fullName>
    <description>PDX Field</description>
    <label>Annual Rev impact to Send Away Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>