force-app/main/default/objects/Opportunity/fields/Approval_Stage__c.field-meta.xml
<CustomField>
    <fullName>Approval_Stage__c</fullName>
    <label>Approval Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required (No Quote)</fullName>
            </value>
            <value>
                <fullName>Not Required (No Pre-Order)</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Auto Approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Pending for ASM</fullName>
            </value>
            <value>
                <fullName>Pending for RSM</fullName>
            </value>
            <value>
                <fullName>Pending for Commercial Director</fullName>
            </value>
            <value>
                <fullName>Pending for Senior Commercial Director</fullName>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>1st Level Approved - Pending 2nd Level</fullName>
            </value>
            <value>
                <fullName>2nd Level Approved - Pending 3rd Level</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Channel Manager Approved</fullName>
            </value>
            <value>
                <fullName>Sales Manager Approved</fullName>
            </value>
            <value>
                <fullName>Finance Approved</fullName>
            </value>
            <value>
                <fullName>Commercial Director Approved</fullName>
            </value>
            <value>
                <fullName>Channel Director Approved</fullName>
            </value>
            <value>
                <fullName>Pending for Product Manager</fullName>
            </value>
            <value>
                <fullName>Pending for Global</fullName>
            </value>
            <value>
                <fullName>Pending for Country Manager</fullName>
            </value>
            <value>
                <fullName>Country Manager Approved</fullName>
            </value>
            <value>
                <fullName>Pending for Director</fullName>
            </value>
            <value>
                <fullName>Pending for ES Mgr</fullName>
            </value>
            <value>
                <fullName>Pending for Field Director</fullName>
            </value>
            <value>
                <fullName>Pending for Service Director</fullName>
            </value>
            <value>
                <fullName>Director Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>