force-app/main/default/objects/Opportunity/fields/AR__c.field-meta.xml
<CustomField>
    <fullName>AR__c</fullName>
    <label>AR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Unapproved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>