force-app/main/default/objects/Opportunity/fields/Asset_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Asset_Replacement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Replacement?</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Opportunities (Asset Replacement)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>