force-app/main/default/objects/Opportunity/fields/Asset_Replacing__c.field-meta.xml
<CustomField>
    <fullName>Asset_Replacing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Replacing</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>