force-app/main/default/objects/Opportunity/fields/AST_Automation_or_Manual_AST__c.field-meta.xml
<CustomField>
    <fullName>AST_Automation_or_Manual_AST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AST Automation or Manual AST</label>
    <type>Checkbox</type>
</CustomField>