force-app/main/default/objects/Opportunity/fields/At_Risk_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use checkbox to identify opportunities needing additional attention as they are at risk</description>
    <inlineHelpText>Use checkbox to identify opportunities needing additional attention as they are at risk</inlineHelpText>
    <label>At Risk Opportunity</label>
    <type>Checkbox</type>
</CustomField>