force-app/main/default/objects/Opportunity/fields/At_Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Reason__c</fullName>
    <label>At Risk Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>JP_IDD_Division__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lab Consolidation</fullName>
            </value>
            <value>
                <fullName>Lab out of Business</fullName>
            </value>
            <value>
                <fullName>New Technologies</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Product Availability</fullName>
            </value>
            <value>
                <fullName>Quality Issues</fullName>
            </value>
            <value>
                <fullName>Reason 3</fullName>
            </value>
            <value>
                <fullName>Regulatory Compliance</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Re-tender</fullName>
            </value>
            <value>
                <fullName>Service Issues</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>