force-app/main/default/objects/Opportunity/fields/Base_Currency__c.field-meta.xml
<CustomField>
    <fullName>Base_Currency__c</fullName>
    <label>Base Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>