force-app/main/default/objects/Opportunity/fields/Bidding_Brand__c.field-meta.xml
<CustomField>
    <fullName>Bidding_Brand__c</fullName>
    <label>Bidding Brand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand_Level_2</valueSetName>
    </valueSet>
</CustomField>