force-app/main/default/objects/Opportunity/fields/Bidding_Company__c.field-meta.xml
<CustomField>
    <fullName>Bidding_Company__c</fullName>
    <label>Bidding Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>