force-app/main/default/objects/Opportunity/fields/Bidding_Price__c.field-meta.xml
<CustomField>
    <fullName>Bidding_Price__c</fullName>
    <label>Bidding Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>