force-app/main/default/objects/Opportunity/fields/Blanket_Contract__c.field-meta.xml
<CustomField>
    <fullName>Blanket_Contract__c</fullName>
    <label>Blanket/Contract #</label>
    <length>200</length>
    <type>Text</type>
</CustomField>