force-app/main/default/objects/Opportunity/fields/BRNSHRK__ContentInvitationCount__c.field-meta.xml
<CustomField>
    <fullName>BRNSHRK__ContentInvitationCount__c</fullName>
    <label>Content Invitation Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>