force-app/main/default/objects/Opportunity/fields/BRNSHRK__ContentViewCount__c.field-meta.xml
<CustomField>
    <fullName>BRNSHRK__ContentViewCount__c</fullName>
    <label>Content View Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>