force-app/main/default/objects/Opportunity/fields/BRNSHRK__ContentViewRate__c.field-meta.xml
<CustomField>
    <fullName>BRNSHRK__ContentViewRate__c</fullName>
    <formula>IF(BRNSHRK__ContentInvitationCount__c &gt; 0, MIN(BRNSHRK__ContentViewCount__c / BRNSHRK__ContentInvitationCount__c, 1), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>