force-app/main/default/objects/Opportunity/fields/BRNSHRK__DaysSinceLastContentSent__c.field-meta.xml
<CustomField>
    <fullName>BRNSHRK__DaysSinceLastContentSent__c</fullName>
    <formula>IF(NOT(ISBLANK(DATEVALUE(BRNSHRK__ContentLastSentDate__c ))), ROUND(NOW() - BRNSHRK__ContentLastSentDate__c, 0), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Content Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>