force-app/main/default/objects/Opportunity/fields/Budgetary_Discussion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Budgetary_Discussion_Notes__c</fullName>
    <description>Cascadion Use</description>
    <label>Budgetary Discussion Notes</label>
    <type>TextArea</type>
</CustomField>