force-app/main/default/objects/Opportunity/fields/Budgetary_Discussion_Status__c.field-meta.xml
<CustomField>
    <fullName>Budgetary_Discussion_Status__c</fullName>
    <description>Cascadion Use</description>
    <label>Budgetary Discussion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>