force-app/main/default/objects/Opportunity/fields/Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Case__c</fullName>
    <description>PDX Field</description>
    <label>Business Case</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>