force-app/main/default/objects/Opportunity/fields/Business_Case_Notes__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_Notes__c</fullName>
    <description>Cascadion Use</description>
    <label>Business Case Notes</label>
    <type>TextArea</type>
</CustomField>