force-app/main/default/objects/Opportunity/fields/Bypass_Validation_From_Flow__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_From_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Validation From Flow</label>
    <type>Checkbox</type>
</CustomField>