force-app/main/default/objects/Opportunity/fields/cafsl__Data_Set_Exclude_List__c.field-meta.xml
<CustomField>
    <fullName>cafsl__Data_Set_Exclude_List__c</fullName>
    <label>Data Set Exclude List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>