force-app/main/default/objects/Opportunity/fields/Cascadion_Qty__c.field-meta.xml
<CustomField>
    <fullName>Cascadion_Qty__c</fullName>
    <label>Cascadion (Qty)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>