force-app/main/default/objects/Opportunity/fields/CDD_2019_Owner__c.field-meta.xml
<CustomField>
    <fullName>CDD_2019_Owner__c</fullName>
    <label>CDD 2019 Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>