force-app/main/default/objects/Opportunity/fields/CDD_ERP_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>CDD_ERP_Reference_Id__c</fullName>
    <formula>Account.ERP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDD ERP Reference Id</label>
    <type>Text</type>
</CustomField>