force-app/main/default/objects/Opportunity/fields/CDD_Region__c.field-meta.xml
<CustomField>
    <fullName>CDD_Region__c</fullName>
    <label>CDD Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>