force-app/main/default/objects/Opportunity/fields/CDD_Selling_Channel__c.field-meta.xml
<CustomField>
    <fullName>CDD_Selling_Channel__c</fullName>
    <description>Used to capture which selling channel the order will eventually pass.  Needed to help Distributor and Channel managers in the US identify segments of opportunities.</description>
    <inlineHelpText>Through which channel will the order be placed?</inlineHelpText>
    <label>CDD Selling Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABS</fullName>
            </value>
            <value>
                <fullName>Block Scientific, Inc (Block)</fullName>
            </value>
            <value>
                <fullName>Cardinal</fullName>
            </value>
            <value>
                <fullName>CLC - Clinical Laboratory Consults</fullName>
            </value>
            <value>
                <fullName>Diatron U.S. Inc</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>DPI - Diagnostic Products Inc</fullName>
            </value>
            <value>
                <fullName>DTPM - Drug Testing Program Management</fullName>
            </value>
            <value>
                <fullName>Henry Schein</fullName>
            </value>
            <value>
                <fullName>HMD - Fisher Healthcare</fullName>
            </value>
            <value>
                <fullName>JANT - JANT Pharmacal Corporation</fullName>
            </value>
            <value>
                <fullName>License - Abbott</fullName>
            </value>
            <value>
                <fullName>License - Biomerieux</fullName>
            </value>
            <value>
                <fullName>License - Diasorin</fullName>
            </value>
            <value>
                <fullName>License - Fujirebio</fullName>
            </value>
            <value>
                <fullName>License - OCD</fullName>
            </value>
            <value>
                <fullName>License - Roche</fullName>
            </value>
            <value>
                <fullName>License - Siemens</fullName>
            </value>
            <value>
                <fullName>McKesson</fullName>
            </value>
            <value>
                <fullName>Medical Source Inc</fullName>
            </value>
            <value>
                <fullName>Medline</fullName>
            </value>
            <value>
                <fullName>MedTest DX</fullName>
            </value>
            <value>
                <fullName>Ortho Clinical Diagnostics</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Owens and Minor</fullName>
            </value>
            <value>
                <fullName>RSD - Fisher Scientific</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>USSM - US Specialty Management</fullName>
            </value>
            <value>
                <fullName>VWR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>