force-app/main/default/objects/Opportunity/fields/CDS_ApprovalCheck__c.field-meta.xml
<CustomField>
    <fullName>CDS_ApprovalCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CDS_isApproved</label>
    <type>Checkbox</type>
</CustomField>