force-app/main/default/objects/Opportunity/fields/CDS_CascadianOpptoQuote__c.field-meta.xml
<CustomField>
    <fullName>CDS_CascadianOpptoQuote__c</fullName>
    <description>Used by MBD and CDD.
Sales Rep needs to manually change field values based on Quote approval status.</description>
    <label>Pricing Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>