force-app/main/default/objects/Opportunity/fields/Change_Scheduled_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Scheduled_Start_Date__c</fullName>
    <inlineHelpText>default is close +30 days</inlineHelpText>
    <label>Mass Change Scheduled Start Date</label>
    <type>Date</type>
</CustomField>