force-app/main/default/objects/Opportunity/fields/Channel_CAT__c.field-meta.xml
<CustomField>
    <fullName>Channel_CAT__c</fullName>
    <description>[CDD NA Pilot] This field is used by sales reps to define the channel through which the product will be sold.</description>
    <inlineHelpText>Use to define the channel through which the product(s) will be sold.</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AcroMetrix</fullName>
            </value>
            <value>
                <fullName>Cardinal (US Only)</fullName>
            </value>
            <value>
                <fullName>HMD</fullName>
            </value>
            <value>
                <fullName>Labsco</fullName>
            </value>
            <value>
                <fullName>MGC</fullName>
            </value>
            <value>
                <fullName>VWR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Fisher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>