force-app/main/default/objects/Opportunity/fields/Channel_Country__c.field-meta.xml
<CustomField>
    <fullName>Channel_Country__c</fullName>
    <formula>IF(ISBLANK(End_Customer__c),
  TEXT(Account.Channel_Country__c),
  TEXT(End_Customer__r.Channel_Country__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Channel Country from the related End Customer, unless End Customer is blank, then Channel Country from the related Account.</inlineHelpText>
    <label>Channel Country</label>
    <type>Text</type>
</CustomField>