force-app/main/default/objects/Opportunity/fields/Channel_Division__c.field-meta.xml
<CustomField>
    <fullName>Channel_Division__c</fullName>
    <formula>IF(ISBLANK(End_Customer__c), 
  TEXT(Account.Division__c),
  TEXT(End_Customer__r.Division__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Division from the related End Customer, unless End Customer is blank, then Division from the related Account.</inlineHelpText>
    <label>Channel Division</label>
    <type>Text</type>
</CustomField>